Primeros cambios en el proyecto

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head lang="en">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>UX Tenerife Boilerplate</title>
+  <title>City Point</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -17,12 +17,12 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">UX Tenerife Boilerplate</a>
+        <a class="navbar-brand" href="#">CityPoint</a>
       </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Link</a></li>
-          <li><a href="#">Link</a></li>
+          <li class="active"><a href="#">Contact</a></li>
+          <li><a href="#">About us</a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
             <ul class="dropdown-menu">
@@ -43,14 +43,10 @@
   <!-- Main jumbotron for a primary marketing message or call to action -->
   <div class="jumbotron">
     <div class="container">
-      <h1>UX Tenerife Boilerplate</h1>
-      <p>This is a template for a simple marketing or informational website. It includes:</p>
-      <ul>
-        <li>Bootstrap</li>
-        <li>LESS support</li>
-        <li>Grunt</li>
-      </ul>
-      <p><a class="btn btn-primary btn-lg" role="button">Learn more »</a></p>
+      <h1>CityPoint</h1>
+      <p>Your information turist point based in the user experience</p>
+      <p><a class="btn btn-primary btn-lg" role="button">Get CityPoint</a></p>
+      <p><a class="btn btn-secondary btn-lg" role="link">Learn more...</a></p>
     </div>
   </div>
 
@@ -59,22 +55,22 @@
     <div class="row">
       <div class="col-md-4">
         <div class="marketing-box">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+          <h2>Looking for restaurants?</h2>
+          <p>CityPoint help you to search many of restaurants close to you using for this the GeoInformation</p>
           <p><a class="btn btn-default" href="#" role="button">View details »</a></p>
         </div>
       </div>
       <div class="col-md-4">
         <div class="marketing-box">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+          <h2>Discover Places</h2>
+          <p>Discover the more important places in your city. CityPoint guide you through of the famous places of the city that you are visiting </p>
           <p><a class="btn btn-default" href="#" role="button">View details »</a></p>
         </div>
       </div>
       <div class="col-md-4">
         <div class="marketing-box">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+          <h2>Find Shows</h2>
+          <p>CityPoint propose you hundreds of shows that you can go in the city visited.</p>
           <p><a class="btn btn-default" href="#" role="button">View details »</a></p>
         </div>
       </div>
