--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
     <footer>
       <p>© CityPoint 2014</p>
-      <div align="center"><a id="linkLearnMore" href="#"><img class="img-rounded" src="img/LearnMore.png" alt="Learn More"></a></div>
+      <div align="center"><a id="linkLearnMore" href="#"><img class="img-rounded" src="./img/LearnMore.png" alt="Learn More"></a></div>
     </footer>
   </div> <!-- /container -->
 
