--- a/index2.html
+++ b/index2.html
@@ -54,7 +54,7 @@
     <div class="container">
       <h1>CityPoint</h1>
       <p class="jumbotron2">Your information turist point based in the user experience</p>
-      <p><a class="btn btn-primary btn-lg" id="linkGetCityPoint" role="button">Get CityPoint</a></p>
+      <p><a class="btn btn-primary btn-lg cambio" id="linkGetCityPoint" role="button">Get CityPoint</a></p>
     </div>
   </div>
 
